--- a/后台管理/adminTask/index.html
+++ b/后台管理/adminTask/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>element-ui-vue-admin</title>
+    <title>OnlineTask 后台管理</title>
   </head>
   <body>
     <div id="app"></div>
